--- a/buildtools/dependencies.gradle
+++ b/buildtools/dependencies.gradle
@@ -193,5 +193,8 @@ ext.libs = [
 //            runOnEachAssemble = true
 //        }
 
+		//报表
+		mpchat :"com.github.PhilJay:MPAndroidChart:v3.0.0",
+
 ]
 
